--- a/facebook-trending/test.html
+++ b/facebook-trending/test.html
@@ -8,7 +8,7 @@
  
 <script>
 YUI().use('yql', function(Y){
-    var query = 'select * from rss(0,100) where url in ("http://www.gmanetwork.com/news/rss/publicaffairs", "http://www.gmanetwork.com/news/rss/newstv", "http://www.gmanetwork.com/news/rss/video", "http://www.gmanetwork.com/news/rss/photo", "http://www.gmanetwork.com/news/rss/news", "http://www.gmanetwork.com/news/rss/news/world", "http://www.gmanetwork.com/news/rss/news/metro", "http://www.gmanetwork.com/news/rss/news/nation", "http://www.gmanetwork.com/news/rss/news/regions", "http://www.gmanetwork.com/news/rss/news/specialreports", "http://www.gmanetwork.com/news/rss/news/pinoyabroad", "http://www.gmanetwork.com/news/rss/news/ulatfilipino", "http://www.gmanetwork.com/news/rss/money") | sort(field="pubDate", descending="true")'
+    var query = 'select * from rss(0,100) where url in ("http://www.gmanetwork.com/rss", "http://www.gmanetwork.com/entertainment/rss", "http://www.gmanetwork.com/kapusofoundation/rss", "http://www.gmanetwork.com/records/rss", "http://www.gmanetwork.com/films/rss", "http://www.gmanetwork.com/community/rss", "http://www.gmanetwork.com/artistcenter/rss", "http://www.gmanetwork.com/news/rss/news", "http://www.gmanetwork.com/news/rss/money", "http://www.gmanetwork.com/news/rss/sports", "http://www.gmanetwork.com/news/rss/scitech", "http://www.gmanetwork.com/news/rss/showbiz", "http://www.gmanetwork.com/news/rss/lifestyle", "http://www.gmanetwork.com/news/rss/opinion", "http://www.gmanetwork.com/news/rss/hashtag", "http://www.gmanetwork.com/news/rss/news/world") | sort(field="pubDate", descending="true")'
     var q = Y.YQL(query, function(r){
         //r now contains the result of the YQL Query as a JSON
         var feedmarkup = '<table>'
