--- a/facebook-trending/test1.html
+++ b/facebook-trending/test1.html
@@ -15,7 +15,7 @@ YUI().use('yql', function(Y){
         var feed = r.query.results.item // get feed as array of entries
         for (var i=0; i<feed.length; i++){
             feedmarkup += '<tr><td><span class="fb-comments-count" data-href="'+feed[i].link+'"></span></td><td><span class="fb-share-button" data-layout="button_count" data-href="'+feed[i].link+'"></td><td><a href="' + feed[i].link + '">'
-            feedmarkup += feed[i].title + '</a></td></tr>'
+            feedmarkup += feed[i].title + '</a></td><td>'+feed[i].pubDate+'</td></tr>'
         }
         document.getElementById('qznews1').innerHTML = feedmarkup + '</table>'
     })
