--- a/facebook-trending/test1.html
+++ b/facebook-trending/test1.html
@@ -20,6 +20,8 @@ YUI().use('yql', function(Y){
         document.getElementById('qznews1').innerHTML = feedmarkup + '</table>'
     })
 })
+var d=new Date("October 13, 1975 11:13:00");
+document.write(d.getTime() + " milliseconds since 1970/01/01");
 </script>
 
 
