--- a/facebook-trending/test1.html
+++ b/facebook-trending/test1.html
@@ -21,7 +21,7 @@ YUI().use('yql', function(Y){
     })
 })
 var d=new Date("October 13, 1975 11:13:00");
-document.write(d.getTime() + " milliseconds since 1970/01/01");
+document.write(d.getDate() d.getHours() + " milliseconds since 1970/01/01");
 </script>
 
 
