--- a/facebook-trending/test1.html
+++ b/facebook-trending/test1.html
@@ -14,7 +14,7 @@ YUI().use('yql', function(Y){
         var feedmarkup = '<table>'
         var feed = r.query.results.item // get feed as array of entries
         for (var i=0; i<feed.length; i++){
-            feedmarkup += '<tr><td><span class="fb-comments-count" data-href="'+feed[i].link+'"></span></td><td><span class="fb-share-button" data-layout="button_count" data-href="'+feed[i].link+'"></td></td><td>'+d.getDate(feed[i].pubDate)+"/"+d.getHours(feed[i].pubDate)+"/"+d.getUTCHours(feed[i].pubDate)+'<td><a href="' + feed[i].link + '">'
+            feedmarkup += '<tr><td><span class="fb-comments-count" data-href="'+feed[i].link+'"></span></td><td><span class="fb-share-button" data-layout="button_count" data-href="'+feed[i].link+'"></td></td><td>'d.getDate(feed[i].pubDate)'<td><a href="' + feed[i].link + '">'
             feedmarkup += feed[i].title + '</a></td></tr>'
         }
         document.getElementById('qznews1').innerHTML = feedmarkup + '</table>'
