--- a/facebook-trending/test1.html
+++ b/facebook-trending/test1.html
@@ -15,7 +15,7 @@ YUI().use('yql', function(Y){
         var feed = r.query.results.item // get feed as array of entries
         for (var i=0; i<feed.length; i++){
          var d=new Date(feed[i].pubDate);
-            feedmarkup += '<tr><td><span class="fb-comments-count" data-href="'+feed[i].link+'"></span></td><td><span class="fb-share-button" data-layout="button_count" data-href="'+feed[i].link+'"></td></td><td>'+d.getMonth()+"/"+d.getDate()+" - "+d.getHours()+" : "+d.getMinutes()'<td><a href="' + feed[i].link + '">'
+            feedmarkup += '<tr><td><span class="fb-comments-count" data-href="'+feed[i].link+'"></span></td><td><span class="fb-share-button" data-layout="button_count" data-href="'+feed[i].link+'"></td></td><td>'+d.getMonth()+"/"+d.getDate()+" - "+d.getHours()+" : "+d.getMinutes()+'<td><a href="' + feed[i].link + '">'
             feedmarkup += feed[i].title + '</a></td></tr>'
         }
         document.getElementById('qznews1').innerHTML = feedmarkup + '</table>'
