--- a/facebook-trending/test1.html
+++ b/facebook-trending/test1.html
@@ -25,13 +25,15 @@ if (hrs>12 && hrs!=0){
  var hrs=hrs+":"+mins+" PM";}
 else if(hrs<12 && hrs!=0){
  if(mins<10){var mins="0"+mins;}
- var hrs="&nbsp;"+hrs+":"+mins+" AM";}
+ if(hrs<10){var space="&nbsp;";}
+ else{var space="";}
+ var hrs=space+""+hrs+":"+mins+" AM";}
 else if(hrs==12){
  if(mins<10){var mins="0"+mins;}
- var hrs="&nbsp;"+hrs+":"+mins+" PM";}
+ var hrs=hrs+":"+mins+" PM";}
 else{var hrs=hrs+12;
  if(mins<10){var mins="0"+mins;}
- var hrs="&nbsp;"+hrs+":"+mins+" AM";}
+ var hrs=hrs+":"+mins+" AM";}
 
             feedmarkup += '<tr><td><span class="fb-comments-count" data-href="'+feed[i].link+'"></span></td><td><span class="fb-share-button" data-layout="button_count" data-href="'+feed[i].link+'"></td></td><td>'+month+"/"+d.getDate()+" - "+hrs+'<td><a href="' + feed[i].link + '">'
             feedmarkup += feed[i].title + '</a></td></tr>'
