--- a/facebook-trending/test1.html
+++ b/facebook-trending/test1.html
@@ -22,10 +22,12 @@ YUI().use('yql', function(Y){
 if (hrs>12 && hrs!=0){
  var hrs=hrs-12;
  if(mins<10){var mins="0"+mins;}
- var hrs=hrs+":"+mins+" PM";}
+ if(hrs<10){var space="&nbsp;&nbsp;";}
+ else{var space="";}
+ var hrs=space+""+hrs+":"+mins+" PM";}
 else if(hrs<12 && hrs!=0){
  if(mins<10){var mins="0"+mins;}
- if(hrs<10){var space="&nbsp;";}
+ if(hrs<10){var space="&nbsp;&nbsp;";}
  else{var space="";}
  var hrs=space+""+hrs+":"+mins+" AM";}
 else if(hrs==12){
