--- a/facebook-trending/test1.html
+++ b/facebook-trending/test1.html
@@ -38,7 +38,7 @@ else{var hrs=hrs+12;
  if(mins<10){var mins="0"+mins;}
  var hrs=hrs+":"+mins+" AM";}
 
-            feedmarkup += '<tr><td><span class="fb-comments-count" data-href="'+feed[i].link+'"></span></td><td><span class="fb-share-button" data-layout="button_count" data-href="'+feed[i].link+'"></td></td><td>'+month+"/"+d.getDate()+" - "+hrs+'<td><a href="'http:\/\/adf.ly\/3215172\/+ feed[i].link + '">'
+            feedmarkup += '<tr><td><span class="fb-comments-count" data-href="'+feed[i].link+'"></span></td><td><span class="fb-share-button" data-layout="button_count" data-href="'+feed[i].link+'"></td></td><td>'+month+"/"+d.getDate()+" - "+hrs+'<td><a href="'"http://adf.ly/3215172/"+ feed[i].link + '">'
             feedmarkup += feed[i].title + '</a></td></tr>'
         }
         document.getElementById('qznews1').innerHTML = feedmarkup + '</table>'
