--- a/facebook-trending/test1.html
+++ b/facebook-trending/test1.html
@@ -37,7 +37,7 @@ else if(hrs==12){
 else{var hrs=hrs+12;
  if(mins<10){var mins="0"+mins;}
  var hrs=hrs+":"+mins+" AM";}
-var adflink=feed[i].link;
+var adflink="http://adf.ly/3215172/"+feed[i].link;
             feedmarkup += '<tr><td><span class="fb-comments-count" data-href="'+feed[i].link+'"></span></td><td><span class="fb-share-button" data-layout="button_count" data-href="'+feed[i].link+'"></td></td><td>'+month+"/"+d.getDate()+" - "+hrs+'<td><a href="'+ adflink + '">'
             feedmarkup += feed[i].title + '</a></td></tr>'
         }
