--- a/facebook-trending/test1.html
+++ b/facebook-trending/test1.html
@@ -40,10 +40,7 @@ else{var hrs=hrs+12;
  var x = Math.floor((Math.random() * 2) + 1);
  if (x==1){  var adslink="http://adf.ly/3215172/"+feed[i].link;}
  else{var adslink="http://sh.st/st/c735ea3eec8573c06ed8b46d727f0bbe/"+feed[i].link;}
-
-
-
-            feedmarkup += '<tr><td><span class="fb-comments-count" data-href="'+feed[i].link+'"></span></td><td><span class="fb-share-button" data-layout="button_count" data-href="'+feed[i].link+'"></td></td><td>'+month+"/"+d.getDate()+" - "+hrs+'<td><a href="'+ adslink + '">'
+            feedmarkup += '<tr><td><span class="fb-comments-count" data-href="'+feed[i].link+'"></span></td><td><span class="fb-share-button" data-layout="button_count" data-href="'+feed[i].link+'"></td></td><td>'+month+"/"+d.getDate()+" - "+hrs+'<td><a target="_blank" href="'+ adslink + '">'
             feedmarkup += feed[i].title + '</a></td></tr>'
         }
         document.getElementById('qznews1').innerHTML = feedmarkup + '</table>'
