--- a/facebook-trending/001.html
+++ b/facebook-trending/001.html
@@ -11,8 +11,8 @@
 <h2><a href="http://geekpublisher.github.io/blogger-tools/facebook-trending/" target="_self">Complete Lists</a>&nbsp;<a href="http://geekpublisher.github.io/blogger-tools/facebook-trending/002.html" target="_self">Next</a></h2>
 http://www.wattafox.com
 <script src="http://www.wattafox.com/atom.xml?alt=json&amp;max-results=20&amp;redirect=false&amp;callback=showRecentPosts"></script>
-http://www.filipinonewsinfo.com
-<script src="http://www.filipinonewsinfo.com/atom.xml?alt=json&amp;max-results=20&amp;redirect=false&amp;callback=showRecentPosts"></script>
+https://www.onlinetruestories.com
+<script src="https://www.onlinetruestories.com/atom.xml?alt=json&amp;max-results=20&amp;redirect=false&amp;callback=showRecentPosts"></script>
 <h2><a href="http://geekpublisher.github.io/blogger-tools/facebook-trending/" target="_self">Complete Lists</a>&nbsp;<a href="http://geekpublisher.github.io/blogger-tools/facebook-trending/002.html" target="_self">Next</a></h2>
 </body>
 </html>
