--- a/facebook-trending/002.html
+++ b/facebook-trending/002.html
@@ -9,16 +9,16 @@
 <script src="http://geekpublisher.github.io/blogger-tools/facebook-trending/js/facebookSDK.js"></script>
 <script src="http://geekpublisher.github.io/blogger-tools/facebook-trending/js/showRecentPosts.js"></script>
 <h2><a href="http://geekpublisher.github.io/blogger-tools/facebook-trending/001.html" target="_self">Previous</a>&nbsp;<a href="http://geekpublisher.github.io/blogger-tools/facebook-trending/" target="_self">Complete Lists</a>&nbsp;<a href="http://geekpublisher.github.io/blogger-tools/facebook-trending/003.html" target="_self">Next</a></h2>
-http://www.nowreader.com
-<script src="http://www.nowreader.com/atom.xml?alt=json&amp;max-results=20&amp;redirect=false&amp;callback=showRecentPosts"></script>
-http://philippinesnewsportal2016.blogspot.com
-<script src="http://philippinesnewsportal2016.blogspot.com/atom.xml?alt=json&amp;max-results=20&amp;redirect=false&amp;callback=showRecentPosts"></script>
-http://elitenewsfeeds.blogspot.com
-<script src="http://elitenewsfeeds.blogspot.com/atom.xml?alt=json&amp;max-results=20&amp;redirect=false&amp;callback=showRecentPosts"></script>
-http://www.philippinesreports.com
-<script src="http://www.philippinesreports.com/atom.xml?alt=json&amp;max-results=20&amp;redirect=false&amp;callback=showRecentPosts"></script>
-http://www.thesummitexpress.com
-<script src="http://www.thesummitexpress.com/atom.xml?alt=json&amp;max-results=20&amp;redirect=false&amp;callback=showRecentPosts"></script>
+https://www.howtocare.net/
+<script src="https://www.howtocare.net/atom.xml?alt=json&amp;max-results=20&amp;redirect=false&amp;callback=showRecentPosts"></script>
+https://www.pinoytrendingportal.com/
+<script src="https://www.pinoytrendingportal.com/atom.xml?alt=json&amp;max-results=20&amp;redirect=false&amp;callback=showRecentPosts"></script>
+https://www.newspresenter.net/
+<script src="https://www.newspresenter.net/atom.xml?alt=json&amp;max-results=20&amp;redirect=false&amp;callback=showRecentPosts"></script>
+https://www.pinoynewsblog.com/
+<script src="https://www.pinoynewsblog.com/atom.xml?alt=json&amp;max-results=20&amp;redirect=false&amp;callback=showRecentPosts"></script>
+https://www.thesummitexpress.com/
+<script src="https://www.thesummitexpress.com/atom.xml?alt=json&amp;max-results=20&amp;redirect=false&amp;callback=showRecentPosts"></script>
 <h2><a href="http://geekpublisher.github.io/blogger-tools/facebook-trending/001.html" target="_self">Previous</a>&nbsp;<a href="http://geekpublisher.github.io/blogger-tools/facebook-trending/" target="_self">Complete Lists</a>&nbsp;<a href="http://geekpublisher.github.io/blogger-tools/facebook-trending/003.html" target="_self">Next</a></h2>
 </body>
 </html>
