--- a/facebook-trending/007.html
+++ b/facebook-trending/007.html
@@ -8,15 +8,8 @@
 <body>
 <script src="http://geekpublisher.github.io/blogger-tools/facebook-trending/js/facebookSDK.js"></script>
 <script src="http://geekpublisher.github.io/blogger-tools/facebook-trending/js/showRecentPosts.js"></script>
-http://www.trendingnewsphfile.net
-<script src="http://www.trendingnewsphfile.net/atom.xml?alt=json&amp;max-results=20&amp;redirect=false&amp;callback=showRecentPosts"></script>
-http://www.sizzlingfeed.com
-<script src="http://www.sizzlingfeed.com/atom.xml?alt=json&amp;max-results=20&amp;redirect=false&amp;callback=showRecentPosts"></script>
-http://rodydu30.blogspot.com
-<script src="http://rodydu30.blogspot.com/atom.xml?alt=json&amp;max-results=20&amp;redirect=false&amp;callback=showRecentPosts"></script>
-http://www.coolbuster.net
-<script src="http://www.coolbuster.net/atom.xml?alt=json&amp;max-results=20&amp;redirect=false&amp;callback=showRecentPosts"></script>
-http://www.boytrending.com
-<script src="http://www.boytrending.com/atom.xml?alt=json&amp;max-results=20&amp;redirect=false&amp;callback=showRecentPosts"></script>
+https://www.coolbuster.net/
+<script src="https://www.coolbuster.net/atom.xml?alt=json&amp;max-results=20&amp;redirect=false&amp;callback=showRecentPosts"></script>
+
 </body>
 </html>
