--- a/facebook-trending/index.html
+++ b/facebook-trending/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css">
 </head>
 <body>
+    <a href="//geekpublisher.github.io/blogger-tools/facebook-trending/001.html">PG 1</a><br/>
 <script src="http://geekpublisher.github.io/blogger-tools/facebook-trending/js/facebookSDK.js"></script>
 <script src="http://geekpublisher.github.io/blogger-tools/facebook-trending/js/showRecentPosts.js"></script>
 <h2><a href='http://geekpublisher.github.io/blogger-tools/facebook-trending/001.html' target='_blank'>Page 1</a></h2>
