--- a/facebook-trending/001.html
+++ b/facebook-trending/001.html
@@ -6,11 +6,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css">
 </head>
 <body>
-<script src="http://geekpublisher.github.io/blogger-tools/facebook-trending/js/facebookSDK.js"></script>
-<script src="http://geekpublisher.github.io/blogger-tools/facebook-trending/js/showRecentPosts.js"></script>
-<h2><a href="http://geekpublisher.github.io/blogger-tools/facebook-trending/" target="_self">Complete Lists</a>&nbsp;<a href="http://geekpublisher.github.io/blogger-tools/facebook-trending/002.html" target="_self">Next</a></h2>
+<script src="//geekpublisher.github.io/blogger-tools/facebook-trending/js/facebookSDK.js"></script>
+<script src="//geekpublisher.github.io/blogger-tools/facebook-trending/js/showRecentPosts.js"></script>
+<h2><a href="//geekpublisher.github.io/blogger-tools/facebook-trending/" target="_self">Complete Lists</a>&nbsp;<a href="//geekpublisher.github.io/blogger-tools/facebook-trending/002.html" target="_self">Next</a></h2>
 https://www.onlinetruestories.com
 <script src="https://www.onlinetruestories.com/atom.xml?alt=json&amp;max-results=20&amp;redirect=false&amp;callback=showRecentPosts"></script>
-<h2><a href="http://geekpublisher.github.io/blogger-tools/facebook-trending/" target="_self">Complete Lists</a>&nbsp;<a href="http://geekpublisher.github.io/blogger-tools/facebook-trending/002.html" target="_self">Next</a></h2>
+<h2><a href="//geekpublisher.github.io/blogger-tools/facebook-trending/" target="_self">Complete Lists</a>&nbsp;<a href="//geekpublisher.github.io/blogger-tools/facebook-trending/002.html" target="_self">Next</a></h2>
 </body>
 </html>
