--- a/facebook-trending/002.html
+++ b/facebook-trending/002.html
@@ -6,19 +6,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css">
 </head>
 <body>
-<script src="http://geekpublisher.github.io/blogger-tools/facebook-trending/js/facebookSDK.js"></script>
-<script src="http://geekpublisher.github.io/blogger-tools/facebook-trending/js/showRecentPosts.js"></script>
-<h2><a href="http://geekpublisher.github.io/blogger-tools/facebook-trending/001.html" target="_self">Previous</a>&nbsp;<a href="http://geekpublisher.github.io/blogger-tools/facebook-trending/" target="_self">Complete Lists</a>&nbsp;<a href="http://geekpublisher.github.io/blogger-tools/facebook-trending/003.html" target="_self">Next</a></h2>
-https://www.howtocare.net/
-<script src="https://www.howtocare.net/atom.xml?alt=json&amp;max-results=20&amp;redirect=false&amp;callback=showRecentPosts"></script>
+<script src="//geekpublisher.github.io/blogger-tools/facebook-trending/js/facebookSDK.js"></script>
+<script src="//geekpublisher.github.io/blogger-tools/facebook-trending/js/showRecentPosts.js"></script>
+<h2><a href="//geekpublisher.github.io/blogger-tools/facebook-trending/001.html" target="_self">Previous</a>&nbsp;<a href="//geekpublisher.github.io/blogger-tools/facebook-trending/" target="_self">Complete Lists</a>&nbsp;<a href="//geekpublisher.github.io/blogger-tools/facebook-trending/003.html" target="_self">Next</a></h2>
 https://www.pinoytrendingportal.com/
 <script src="https://www.pinoytrendingportal.com/atom.xml?alt=json&amp;max-results=20&amp;redirect=false&amp;callback=showRecentPosts"></script>
 https://www.newspresenter.net/
 <script src="https://www.newspresenter.net/atom.xml?alt=json&amp;max-results=20&amp;redirect=false&amp;callback=showRecentPosts"></script>
-https://www.pinoynewsblog.com/
-<script src="https://www.pinoynewsblog.com/atom.xml?alt=json&amp;max-results=20&amp;redirect=false&amp;callback=showRecentPosts"></script>
 https://www.thesummitexpress.com/
 <script src="https://www.thesummitexpress.com/atom.xml?alt=json&amp;max-results=20&amp;redirect=false&amp;callback=showRecentPosts"></script>
-<h2><a href="http://geekpublisher.github.io/blogger-tools/facebook-trending/001.html" target="_self">Previous</a>&nbsp;<a href="http://geekpublisher.github.io/blogger-tools/facebook-trending/" target="_self">Complete Lists</a>&nbsp;<a href="http://geekpublisher.github.io/blogger-tools/facebook-trending/003.html" target="_self">Next</a></h2>
+<h2><a href="//geekpublisher.github.io/blogger-tools/facebook-trending/001.html" target="_self">Previous</a>&nbsp;<a href="//geekpublisher.github.io/blogger-tools/facebook-trending/" target="_self">Complete Lists</a>&nbsp;<a href="//geekpublisher.github.io/blogger-tools/facebook-trending/003.html" target="_self">Next</a></h2>
 </body>
 </html>
